@@ -17,6 +17,9 @@ complete proof command on mouse button 2
 </LI>
 <LI>the clone button yields a frozen copy of the proof tree 
 </LI>
+<LI>branches that are finished by a cheating tactic (such as
+<KBD>admit</KBD> or <KBD>sorry</KBD>) are colored in red
+</LI>
 <LI>keep proof tree windows when retracting in a big step to a
 point before the proof
 <P></P></LI>
