@@ -1,5 +1,9 @@
 2011-05-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* color cheated commands/branches in red
+
+2011-05-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* clone button
 
 2011-05-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>
